--- a/v4.4.1/site/docs/4.4/assets/scss/_nav.scss
+++ b/v4.4.1/site/docs/4.4/assets/scss/_nav.scss
@@ -2,3 +2,13 @@
 // Main navbar
 //
 
+.bd-navbar {
+  @include media-breakpoint-up(md) {
+    @supports (position: sticky) {
+      position: sticky;
+      top: 0;
+      z-index: 1071; // over everything in bootstrap
+    }
+  }
+
+}
